--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="btn_add_note">Добавить</string>
     <string name="start_label">Что использовать</string>
     <string name="start_btn_room">ROOM</string>
+    <string name="title">Заметки</string>
+    <string name="toast_enter_name">Введите имя заметки</string>
 </resources>
